Added resize functionality

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
 }
@@ -147,4 +147,11 @@ body {
   margin-left: 70px;
   color: white;
   font-family: monospace;
+}
+
+#resizer {
+  width: 100%;
+  height: 8px;
+  background-color: rgb(102, 107, 122);
+  cursor: row-resize; /* Cursor style for resizing */
 }
