--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   position: absolute;
   left: 60px;
-  top: 0;
+  top: 5px;
   color: white;
   font-size: 20px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -87,11 +87,12 @@ body {
 }
 .langName {
   color: white;
-  margin-left: 10px;
+  margin-left: 5px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .codeArea {
-  flex: 1; 
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,18 +119,21 @@ body {
 }
 
 #resultSection {
+  /* border: solid 2px red; */
+  width: 100%;
+  height: 100%;
 }
 
 #resultContainer {
-  background: white;
-  width: 100%;
-  height: 100%;
+  background: gray;
+  padding: 10px;
+
   /* margin: 3px; */
 }
 
 #viewer {
-  width: 100%; 
-  height: 100vh; 
+  width: 100%;
+  height: 100vh;
 }
 #footer {
   position: fixed;
@@ -151,8 +155,18 @@ body {
 }
 
 #resizer {
+  display: flex;
   width: 100%;
   height: 8px;
   background-color: rgb(102, 107, 122);
-  cursor: row-resize; 
+  cursor: row-resize;
+  justify-content: center;
+}
+
+#resizer div {
+  display: flex;
+  align-items: end;
+  color: white;
+  font-size: large;
+  font-weight: bold;
 }
